--- a/home.html
+++ b/home.html
@@ -1,297 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Quotivate | Home</title>
-
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet" />
-
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik+Bubbles">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    html, body {
+    body, h1,h2,h3,h4,h5,h6 {
       font-family: 'Rubik Bubbles', cursive;
-      scroll-behavior: smooth;
-      background: linear-gradient(to bottom right, #ffe0f0, #ffd9ec);
-      overflow-x: hidden;
-      color: #333;
     }
-
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: radial-gradient(#ffd6e7 1px, transparent 1px);
-      background-size: 40px 40px;
-      opacity: 0.2;
-      pointer-events: none;
-      z-index: 0;
-    }
-
-    .hero-section {
-      position: relative;
-      height: 85vh;
-      width: 100%;
-      clip-path: ellipse(100% 90% at 50% 0%);
+    body, html { line-height: 1.8; }
+    .pink-bg { background: #ffe0f0; }
+    .pink-bar { background: #ff77aa !important; color: white !important; }
+    .button-pink { background: #ff5f99; color: white; }
+    .button-pink:hover { background: #ff77aa; }
+    .hero {
       background-image: url('https://t4.ftcdn.net/jpg/02/75/71/89/360_F_275718943_ORKB0mXTEoa3YuKB0Ng8hBJPmB5JXxFl.jpg');
       background-size: cover;
       background-position: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
+      min-height: 100vh;
+      position: relative;
+      clip-path: ellipse(100% 85% at 50% 0%);
     }
-
-    .hero-text {
+    .hero h1 {
       font-size: 4rem;
       color: white;
-      text-align: center;
       text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
-      z-index: 2;
-      padding: 2rem;
-      animation: popIn 1.8s ease-out forwards;
-      opacity: 0;
     }
-
-    @keyframes popIn {
-      0% {
-        transform: scale(0.8);
-        opacity: 0;
-      }
-      100% {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-
-    .quote-bubble {
+    .hero .w3-display-container::after {
+      content: '';
       position: absolute;
-      top: 15%;
-      right: 10%;
-      background-color: #ffedf5;
-      border-radius: 25px;
-      padding: 1rem 1.5rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      font-size: 1rem;
-      color: #ff5f99;
-      animation: bounceQuote 4s ease-in-out infinite;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background: radial-gradient(circle, rgba(255,224,240,0.6), transparent);
     }
-
-    @keyframes bounceQuote {
-      0%, 100% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-10px);
-      }
-    }
-
-    .floating-icon {
-      position: absolute;
-      font-size: 1.5rem;
-      opacity: 0.7;
-      animation: floatIcon 8s infinite ease-in-out;
-    }
-
-    @keyframes floatIcon {
-      0% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-20px);
-      }
-      100% {
-        transform: translateY(0);
-      }
-    }
-
-    .curve-up {
-      position: relative;
-      bottom: 0;
-      width: 100%;
-      overflow: hidden;
-      line-height: 0;
-    }
-
-    .curve-up svg {
-      display: block;
-      width: 100%;
-      height: 120px;
-    }
-
-    .mission-section {
-      margin-top: -10rem;
-      padding: 6rem 2rem 5rem;
-      text-align: center;
-      background-color: #fff0f5;
-      opacity: 0;
-      transform: translateY(50px);
-      transition: opacity 1.2s ease, transform 1.2s ease;
-      position: relative;
-      z-index: 2;
-    }
-
-    .mission-section.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    .mission-text {
-      max-width: 750px;
-      margin: 0 auto;
-      font-size: 1.4rem;
-      background-color: #ffeaf3;
-      padding: 2rem;
-      border-radius: 30px;
-      box-shadow: 0 10px 30px rgba(255, 182, 193, 0.3);
-      animation: fadeIn 2s ease-in;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .mission-text h2 {
-      font-size: 2.2rem;
-      color: #ff5f99;
-      margin-bottom: 1rem;
-    }
-
-    .mission-text p {
-      font-size: 1.2rem;
-      line-height: 1.7;
-      color: #555;
-    }
-
-    .quotes-button {
-      margin-top: 3rem;
-      padding: 1rem 2.5rem;
-      font-size: 1.3rem;
-      background-color: #ff77aa;
-      border: none;
-      border-radius: 50px;
-      color: white;
-      cursor: pointer;
-      box-shadow: 0 8px 20px rgba(255, 105, 135, 0.3);
-      transition: all 0.3s ease;
-      opacity: 0;
-      transform: translateY(30px);
-      position: relative;
-    }
-
-    .quotes-button.show {
-      opacity: 1;
-      transform: translateY(0);
-      animation: wiggle 2s infinite ease-in-out;
-    }
-
-    .quotes-button:hover {
-      background-color: #ff5f99;
-      box-shadow: 0 8px 25px rgba(255, 105, 135, 0.5);
-      transform: scale(1.05);
-    }
-
-    .quotes-button::after {
-      content: "💖";
-      position: absolute;
-      right: -1.8rem;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 1.2rem;
-    }
-
-    @keyframes wiggle {
-      0%, 100% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-3px);
-      }
-    }
-
-    /* Confetti hearts */
-    .heart {
-      position: fixed;
-      top: -10px;
-      font-size: 1.2rem;
-      color: #ff5f99;
-      animation: fall 10s linear infinite;
-    }
-
-    @keyframes fall {
-      0% { transform: translateY(0); }
-      100% { transform: translateY(120vh); }
-    }
-
+    .feature-icon { color: #ff5f99; }
   </style>
 </head>
-<body>
+<body class="pink-bg">
 
-  <!-- Floating Decorations -->
-  <div class="quote-bubble">"Spread love daily!"</div>
-  <div class="floating-icon" style="top: 100px; left: 40px;">🌸</div>
-  <div class="floating-icon" style="top: 300px; right: 60px;">⭐</div>
-  <div class="floating-icon" style="bottom: 180px; left: 100px;">🌟</div>
+<div class="w3-bar w3-top w3-hide-large w3-hide-medium pink-bar">
+  <button class="w3-bar-item w3-button w3-right" onclick="w3_open()">
+    <i class="fa fa-bars"></i>
+  </button>
+</div>
 
-  <!-- Falling Hearts -->
-  <div class="heart" style="left: 10%; animation-delay: 0s;">💗</div>
-  <div class="heart" style="left: 30%; animation-delay: 2s;">💖</div>
-  <div class="heart" style="left: 50%; animation-delay: 4s;">💞</div>
-  <div class="heart" style="left: 70%; animation-delay: 6s;">💕</div>
-  <div class="heart" style="left: 90%; animation-delay: 8s;">💘</div>
+<nav class="w3-sidebar w3-bar-block w3-card pink-bar w3-animate-left w3-hide-medium w3-hide-large"
+     style="display:none" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button">Close ×</a>
+  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
+  <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">TEAM</a>
+  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">WORK</a>
+  <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">PRICING</a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+</nav>
 
-  <!-- Hero Section -->
-  <header class="hero-section">
-    <h1 class="hero-text">Welcome to Quotivate</h1>
-  </header>
-
-  <div class="curve-up">
-    <svg viewBox="0 0 1440 320">
-      <path fill="#fff0f5" d="M0,288 C360,200 1080,400 1440,320 L1440,320 L0,320 Z"></path>
-    </svg>
+<header class="hero w3-display-container" id="home">
+  <div class="w3-display-left w3-padding-64">
+    <h1 class="w3-jumbo">Start something that matters</h1>
+    <p class="w3-xxlarge w3-hide-small">Stop wasting valuable time on projects that aren't you.</p>
+    <p><a href="#about" class="w3-button button-pink w3-padding-large w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
   </div>
+  <div class="w3-display-bottomleft w3-padding-32">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+  </div>
+</header>
 
-  <!-- Mission Section -->
-  <section class="mission-section">
-    <div class="mission-text">
-      <h2>Our Mission</h2>
-      <p>
-        We're building a social media platform that isn’t packed with distractions.<br />
-        Quotivate is focused on positivity, creativity, and daily inspiration — not chaos.<br />
-        Simple, motivating, and built just for you 💖
-      </p>
+<div class="w3-container w3-center w3-padding-64" id="about">
+  <h3>ABOUT THE COMPANY</h3>
+  <p class="w3-large">Key features of our company</p>
+  <div class="w3-row-padding w3-margin-top">
+    <div class="w3-quarter">
+      <i class="fa fa-desktop w3-margin-bottom w3-jumbo feature-icon"></i>
+      <p class="w3-large">Responsive</p>
+      <p>Lorem ipsum dolor sit amet...</p>
     </div>
-    <button class="quotes-button" onclick="location.href='index.html'">Quotes</button>
-  </section>
+    <div class="w3-quarter">
+      <i class="fa fa-heart w3-margin-bottom w3-jumbo feature-icon"></i>
+      <p class="w3-large">Passion</p>
+      <p>Lorem ipsum dolor sit amet...</p>
+    </div>
+    <div class="w3-quarter">
+      <i class="fa fa-diamond w3-margin-bottom w3-jumbo feature-icon"></i>
+      <p class="w3-large">Design</p>
+      <p>Lorem ipsum dolor sit amet...</p>
+    </div>
+    <div class="w3-quarter">
+      <i class="fa fa-cog w3-margin-bottom w3-jumbo feature-icon"></i>
+      <p class="w3-large">Support</p>
+      <p>Lorem ipsum dolor sit amet...</p>
+    </div>
+  </div>
+</div>
 
-  <!-- Scroll-triggered animation -->
-  <script>
-    window.addEventListener('scroll', () => {
-      const mission = document.querySelector('.mission-section');
-      const button = document.querySelector('.quotes-button');
-      const triggerPoint = window.innerHeight / 1.2;
+<div class="w3-container w3-light-grey w3-padding-64">
+  <div class="w3-row-padding">
+    <div class="w3-col m6">
+      <h3>We know design.</h3>
+      <p>Lorem ipsum dolor sit amet...</p>
+      <p><a href="#work" class="w3-button button-pink"><i class="fa fa-th"></i> View Our Works</a></p>
+    </div>
+    <div class="w3-col m6">
+      <img src="/w3images/phone_buildings.jpg" class="w3-image w3-round-large" alt="Buildings">
+    </div>
+  </div>
+</div>
 
-      if (mission.getBoundingClientRect().top < triggerPoint) {
-        mission.classList.add('show');
-        button.classList.add('show');
-      }
-    });
-  </script>
+<div class="w3-container w3-center w3-padding-64" id="team">
+  <h3>THE TEAM</h3>
+  <p class="w3-large">The ones who run this company</p>
+  <div class="w3-row-padding w3-grayscale w3-margin-top">
+    <!-- Example member -->
+    <div class="w3-quarter w3-margin-bottom">
+      <div class="w3-card">
+        <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+        <div class="w3-container">
+          <h3>John Doe</h3>
+          <p class="w3-opacity">CEO & Founder</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum.</p>
+          <button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button>
+        </div>
+      </div>
+    </div>
+    <!-- Add other team members similarly -->
+  </div>
+</div>
 
-</body
+<div class="w3-container w3-dark-grey w3-center w3-padding-64">
+  <div class="w3-row">
+    <div class="w3-col m3">
+      <span class="w3-xxlarge">14+</span><br>Partners
+    </div>
+    <div class="w3-col m3">
+      <span class="w3-xxlarge">55+</span><br>Projects Done
+    </div>
+    <div class="w3-col m3">
+      <span class="w3-xxlarge">89+</span><br>Happy Clients
+    </div>
+    <div class="w3-col m3">
+      <span class="w3-xxlarge">150+</span><br>Meetings
+    </div>
+  </div>
+</div>
+
+<div class="w3-container w3-padding-64" id="work">
+  <h3 class="w3-center">OUR WORK</h3>
+  <p class="w3-center w3-large">What we've done for people</p>
+  <div class="w3-row-padding w3-margin-top">
+    <div class="w3-col l3 m6">
+      <img src="/w3images/tech_mic.jpg" class="w3-hover-opacity" style="width:100%" onclick="onClick(this)" alt="A microphone">
+    </div>
+    <!-- More images... -->
+  </div>
+</div>
+
+<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
+  <span class="w3-button w3-xxlarge w3-black w3-display-topright">×</span>
+  <div class="w3-modal-content w3-animate-zoom w3-center">
+    <img id="img01" class="w3-image">
+    <p id="caption" class="w3-opacity w3-large"></p>
+  </div>
+</div>
+
+<div class="w3-container w3-light-grey w3-padding-64">
+  <div class="w3-row-padding">
+    <div class="w3-col m6">
+      <h3>Our Skills.</h3>
+      <p>Lorem ipsum dolor sit amet...</p>
+    </div>
+    <div class="w3-col m6">
+      <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Photography</p>
+      <div class="w3-grey"><div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div></div>
+      <!-- More bars -->
+    </div>
+  </div>
+</div>
+
+<div class="w3-container w3-center w3-dark-grey w3-padding-64" id="pricing">
+  <h3>PRICING</h3>
+  <p class="w3-large">Choose a pricing plan</p>
+  <div class="w3-row-padding w3-margin-top">
+    <div class="w3-third w3-section">
+      <ul class="w3-ul w3-white w3-hover-shadow">
+        <li class="w3-black w3-xlarge w3-padding-32">Basic</li>
+        <li class="w3-padding-16"><b>10GB</b> Storage</li>
+        <!-- ... -->
+        <li class="w3-light-grey w3-padding-24">
+          <button class="w3-button w3-black">Sign Up</button>
+        </li>
+      </ul>
+    </div>
+    <!-- Other plans -->
+  </div>
+</div>
+
+<div class="w3-container w3-light-grey w3-padding-64" id="contact">
+  <h3 class="w3-center">CONTACT</h3>
+  <p class="w3-center w3-large">Let's get in touch. Send us a message:</p>
+  <div class="w3-margin-top">
+    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>Chicago, US</p>
+    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i>+00 151515</p>
+    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"></i>mail@mail.com</p>
+    <form action="/action_page.php" target="_blank">
+      <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
+      <!-- other inputs -->
+      <p><button class="w3-button w3-black"><i class="fa fa-paper-plane"></i> SEND MESSAGE</button></p>
+    </form>
+    <img src="/w3images/map.jpg" class="w3-image w3-greyscale w3-margin-top" alt="Map">
+  </div>
+</div>
+
+<footer class="w3-center w3-black w3-padding-64">
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <div class="w3-xlarge w3-section">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+  </div>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/" class="w3-hover-text-pink" target="_blank">w3.css</a></p>
+</footer>
+
+<script>
+function onClick(el) {
+  document.getElementById("img01").src = el.src;
+  document.getElementById("caption").innerHTML = el.alt;
+  document.getElementById("modal01").style.display = 'block';
+}
+var mySidebar = document.getElementById("mySidebar");
+function w3_open() { mySidebar.style.display = 'block'; }
+function w3_close() { mySidebar.style.display = 'none'; }
+</script>
+
+</body>
+</html>
