--- a/home.html
+++ b/home.html
@@ -1,244 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Quotivate | Home</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Quotivate | Home</title>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik+Bubbles">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    body, h1,h2,h3,h4,h5,h6 {
+    html, body {
       font-family: 'Rubik Bubbles', cursive;
+      background: linear-gradient(to bottom right, #ffd6e8, #ffeaf4);
+      color: #333;
     }
-    body, html { line-height: 1.8; }
-    .pink-bg { background: #ffe0f0; }
-    .pink-bar { background: #ff77aa !important; color: white !important; }
-    .button-pink { background: #ff5f99; color: white; }
-    .button-pink:hover { background: #ff77aa; }
-    .hero {
+
+    .w3-bar {
+      background-color: #ff99c8 !important;
+    }
+
+    .hero-section {
       background-image: url('https://t4.ftcdn.net/jpg/02/75/71/89/360_F_275718943_ORKB0mXTEoa3YuKB0Ng8hBJPmB5JXxFl.jpg');
       background-size: cover;
       background-position: center;
-      min-height: 100vh;
-      position: relative;
-      clip-path: ellipse(100% 85% at 50% 0%);
-    }
-    .hero h1 {
-      font-size: 4rem;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       color: white;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     }
-    .hero .w3-display-container::after {
-      content: '';
-      position: absolute;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background: radial-gradient(circle, rgba(255,224,240,0.6), transparent);
+
+    .hero-text {
+      text-align: center;
+      padding: 2rem;
+      background-color: rgba(255, 182, 193, 0.4);
+      border-radius: 20px;
     }
-    .feature-icon { color: #ff5f99; }
+
+    .curve-up svg {
+      display: block;
+      width: 100%;
+      height: 100px;
+    }
+
+    .w3-button.pink {
+      background-color: #ff77aa;
+      color: white;
+    }
+
+    .w3-button.pink:hover {
+      background-color: #ff5f99;
+    }
+
+    .decorative {
+      text-align: center;
+      margin: 4rem 2rem;
+      font-size: 1.4rem;
+    }
   </style>
 </head>
-<body class="pink-bg">
+<body>
 
-<div class="w3-bar w3-top w3-hide-large w3-hide-medium pink-bar">
-  <button class="w3-bar-item w3-button w3-right" onclick="w3_open()">
-    <i class="fa fa-bars"></i>
-  </button>
+<!-- Navbar -->
+<div class="w3-bar w3-top w3-large w3-padding">
+  <a href="#home" class="w3-bar-item w3-button w3-hover-white"><i class="fa fa-home"></i> Home</a>
+  <a href="#mission" class="w3-bar-item w3-button w3-hover-white"><i class="fa fa-heart"></i> Mission</a>
+  <a href="index.html" class="w3-bar-item w3-button w3-hover-white"><i class="fa fa-quote-left"></i> Quotes</a>
 </div>
 
-<nav class="w3-sidebar w3-bar-block w3-card pink-bar w3-animate-left w3-hide-medium w3-hide-large"
-     style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button">Close ×</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">TEAM</a>
-  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">WORK</a>
-  <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">PRICING</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
-</nav>
-
-<header class="hero w3-display-container" id="home">
-  <div class="w3-display-left w3-padding-64">
-    <h1 class="w3-jumbo">Start something that matters</h1>
-    <p class="w3-xxlarge w3-hide-small">Stop wasting valuable time on projects that aren't you.</p>
-    <p><a href="#about" class="w3-button button-pink w3-padding-large w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
-  </div>
-  <div class="w3-display-bottomleft w3-padding-32">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+<!-- Hero Section -->
+<header class="hero-section" id="home">
+  <div class="hero-text w3-animate-top">
+    <h1>Welcome to Quotivate</h1>
+    <p>Your daily dose of positive energy.</p>
+    <a href="#mission" class="w3-button pink w3-margin-top">Learn More</a>
   </div>
 </header>
 
-<div class="w3-container w3-center w3-padding-64" id="about">
-  <h3>ABOUT THE COMPANY</h3>
-  <p class="w3-large">Key features of our company</p>
-  <div class="w3-row-padding w3-margin-top">
-    <div class="w3-quarter">
-      <i class="fa fa-desktop w3-margin-bottom w3-jumbo feature-icon"></i>
-      <p class="w3-large">Responsive</p>
-      <p>Lorem ipsum dolor sit amet...</p>
-    </div>
-    <div class="w3-quarter">
-      <i class="fa fa-heart w3-margin-bottom w3-jumbo feature-icon"></i>
-      <p class="w3-large">Passion</p>
-      <p>Lorem ipsum dolor sit amet...</p>
-    </div>
-    <div class="w3-quarter">
-      <i class="fa fa-diamond w3-margin-bottom w3-jumbo feature-icon"></i>
-      <p class="w3-large">Design</p>
-      <p>Lorem ipsum dolor sit amet...</p>
-    </div>
-    <div class="w3-quarter">
-      <i class="fa fa-cog w3-margin-bottom w3-jumbo feature-icon"></i>
-      <p class="w3-large">Support</p>
-      <p>Lorem ipsum dolor sit amet...</p>
-    </div>
-  </div>
+<!-- Curve SVG -->
+<div class="curve-up">
+  <svg viewBox="0 0 1440 320">
+    <path fill="#ffeaf4" d="M0,256 C480,96 960,320 1440,160 L1440,320 L0,320 Z"></path>
+  </svg>
 </div>
 
-<div class="w3-container w3-light-grey w3-padding-64">
-  <div class="w3-row-padding">
-    <div class="w3-col m6">
-      <h3>We know design.</h3>
-      <p>Lorem ipsum dolor sit amet...</p>
-      <p><a href="#work" class="w3-button button-pink"><i class="fa fa-th"></i> View Our Works</a></p>
-    </div>
-    <div class="w3-col m6">
-      <img src="/w3images/phone_buildings.jpg" class="w3-image w3-round-large" alt="Buildings">
-    </div>
-  </div>
+<!-- Mission Section -->
+<section class="w3-container w3-center w3-padding-64" id="mission">
+  <h2 class="w3-xxlarge">Our Mission</h2>
+  <p class="w3-large w3-margin-top">
+    We're building a social media platform that isn’t packed with distractions.<br>
+    Quotivate is focused on positivity, creativity, and daily inspiration — not chaos.<br>
+    Simple, motivating, and built for you.
+  </p>
+  <a href="index.html" class="w3-button pink w3-margin-top">Get Inspired</a>
+</section>
+
+<!-- Decorative Section -->
+<div class="decorative w3-animate-opacity">
+  <i class="fa-solid fa-sparkles fa-2x"></i>
+  <p>Scroll down for more love & motivation!</p>
+  <i class="fa-solid fa-heart fa-2x"></i>
 </div>
 
-<div class="w3-container w3-center w3-padding-64" id="team">
-  <h3>THE TEAM</h3>
-  <p class="w3-large">The ones who run this company</p>
-  <div class="w3-row-padding w3-grayscale w3-margin-top">
-    <!-- Example member -->
-    <div class="w3-quarter w3-margin-bottom">
-      <div class="w3-card">
-        <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-        <div class="w3-container">
-          <h3>John Doe</h3>
-          <p class="w3-opacity">CEO & Founder</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum.</p>
-          <button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button>
-        </div>
-      </div>
-    </div>
-    <!-- Add other team members similarly -->
-  </div>
-</div>
-
-<div class="w3-container w3-dark-grey w3-center w3-padding-64">
-  <div class="w3-row">
-    <div class="w3-col m3">
-      <span class="w3-xxlarge">14+</span><br>Partners
-    </div>
-    <div class="w3-col m3">
-      <span class="w3-xxlarge">55+</span><br>Projects Done
-    </div>
-    <div class="w3-col m3">
-      <span class="w3-xxlarge">89+</span><br>Happy Clients
-    </div>
-    <div class="w3-col m3">
-      <span class="w3-xxlarge">150+</span><br>Meetings
-    </div>
-  </div>
-</div>
-
-<div class="w3-container w3-padding-64" id="work">
-  <h3 class="w3-center">OUR WORK</h3>
-  <p class="w3-center w3-large">What we've done for people</p>
-  <div class="w3-row-padding w3-margin-top">
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_mic.jpg" class="w3-hover-opacity" style="width:100%" onclick="onClick(this)" alt="A microphone">
-    </div>
-    <!-- More images... -->
-  </div>
-</div>
-
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-xxlarge w3-black w3-display-topright">×</span>
-  <div class="w3-modal-content w3-animate-zoom w3-center">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
-</div>
-
-<div class="w3-container w3-light-grey w3-padding-64">
-  <div class="w3-row-padding">
-    <div class="w3-col m6">
-      <h3>Our Skills.</h3>
-      <p>Lorem ipsum dolor sit amet...</p>
-    </div>
-    <div class="w3-col m6">
-      <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Photography</p>
-      <div class="w3-grey"><div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div></div>
-      <!-- More bars -->
-    </div>
-  </div>
-</div>
-
-<div class="w3-container w3-center w3-dark-grey w3-padding-64" id="pricing">
-  <h3>PRICING</h3>
-  <p class="w3-large">Choose a pricing plan</p>
-  <div class="w3-row-padding w3-margin-top">
-    <div class="w3-third w3-section">
-      <ul class="w3-ul w3-white w3-hover-shadow">
-        <li class="w3-black w3-xlarge w3-padding-32">Basic</li>
-        <li class="w3-padding-16"><b>10GB</b> Storage</li>
-        <!-- ... -->
-        <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black">Sign Up</button>
-        </li>
-      </ul>
-    </div>
-    <!-- Other plans -->
-  </div>
-</div>
-
-<div class="w3-container w3-light-grey w3-padding-64" id="contact">
-  <h3 class="w3-center">CONTACT</h3>
-  <p class="w3-center w3-large">Let's get in touch. Send us a message:</p>
-  <div class="w3-margin-top">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>Chicago, US</p>
-    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i>+00 151515</p>
-    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"></i>mail@mail.com</p>
-    <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
-      <!-- other inputs -->
-      <p><button class="w3-button w3-black"><i class="fa fa-paper-plane"></i> SEND MESSAGE</button></p>
-    </form>
-    <img src="/w3images/map.jpg" class="w3-image w3-greyscale w3-margin-top" alt="Map">
-  </div>
-</div>
-
-<footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/" class="w3-hover-text-pink" target="_blank">w3.css</a></p>
+<!-- Footer -->
+<footer class="w3-center w3-padding-32" style="background-color: #ffb6c1;">
+  <p>Made with 💕 by Quotivate Team</p>
 </footer>
-
-<script>
-function onClick(el) {
-  document.getElementById("img01").src = el.src;
-  document.getElementById("caption").innerHTML = el.alt;
-  document.getElementById("modal01").style.display = 'block';
-}
-var mySidebar = document.getElementById("mySidebar");
-function w3_open() { mySidebar.style.display = 'block'; }
-function w3_close() { mySidebar.style.display = 'none'; }
-</script>
 
 </body>
 </html>
